--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react-swc": "^3.4.1",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
