--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.tsx",
+  "homepage": "https://m0hit-singh.github.io/Portfolio",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,7 @@
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
     "@vitejs/plugin-react-swc": "^3.4.1",
+    "gh-pages": "^6.0.0",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
